# python-example-package-lth

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: release-drafter.yml  release.yml  test-pypi.yml  test.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/example_package_lth/: console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
