[tool.poetry]
name = "example-package-lth"
version = "0.1.0"
description = "An example Python package"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/letuanhai/python-example-package-lth"
repository = "https://github.com/letuanhai/python-example-package-lth"
authors = ["letuanhai <letuanhai@live.com>"]
keywords = ["example"]

[tool.poetry.scripts]
example-package-lth = "example_package_lth.console:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
black = {version = "^22.1.0", allow-prereleases = true}
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.2"
flake8-bugbear = "^22.3.23"
flake8-import-order = "^0.18.1"
safety = "^1.10.3"
coverage = {extras = ["toml"], version = "^6.3.2"}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["example_package_lth"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
